--- a/src/django_program/manage/templates/django_program/manage/voucher_list.html
+++ b/src/django_program/manage/templates/django_program/manage/voucher_list.html
@@ -9,6 +9,7 @@
 
 {% block page_actions %}
 <a href="{% url 'manage:voucher-add' conference.slug %}" class="btn btn-primary">Add Voucher</a>
+<a href="{% url 'manage:voucher-bulk-generate' conference.slug %}" class="btn btn-secondary">Bulk Generate</a>
 {% endblock %}
 
 {% block content %}
