--- a/src/django_program/manage/templates/django_program/manage/speaker_list.html
+++ b/src/django_program/manage/templates/django_program/manage/speaker_list.html
@@ -28,6 +28,7 @@
       <th>Email</th>
       <th>Talks</th>
       <th>Synced</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -41,6 +42,13 @@
         {{ speaker.synced_at|date:"N j, Y" }}
         {% else %}
         &mdash;
+        {% endif %}
+      </td>
+      <td style="white-space: nowrap;">
+        {% if speaker.override %}
+        <a href="{% url 'manage:speaker-override-edit' conference.slug speaker.override.pk %}" class="btn btn-sm btn-secondary" title="Edit existing override">Override</a>
+        {% else %}
+        <a href="{% url 'manage:speaker-override-add' conference.slug %}?speaker={{ speaker.pk }}" class="btn btn-sm btn-secondary" title="Create override">+ Override</a>
         {% endif %}
       </td>
     </tr>
